fix!: ttt alignment fix

--- a/css/csoptwo.css
+++ b/css/csoptwo.css
@@ -344,7 +344,7 @@
     background-position: center;
     background-size: 90%;
     filter: invert();
-    margin: -30px 0 0 -30px;
+    margin: -10px 0 0 -10px;
 }
 
 .clickedthree::after{
